<resources>
    <string name="app_name">UzApp</string>
    <string name="pathFrom">Откуда</string>
    <string name="pathTo">Куда</string>
    <string name="select_station_hint">Выберите город</string>
    <string name="popular_destinations">Частые маршруты</string>
    <string name="search_result">Результаты поиска</string>
    <string name="api_endpoint">http://52.59.64.77/v1/</string>
    <string name="search_date_title">Отправление</string>
    <string name="back">+ Обратно</string>
    <string name="see_full_calendar">Весь календарь</string>
    <string name="find_tickets">Найти билеты</string>
    <string name="when">Когда</string>
    <string name="ready">Готово</string>
    <string name="new_trip">Новая поездка</string>
    <string name="reset">Сбросить</string>
    <string name="cancel">Отменить</string>
    <string name="in_n_days">Через %1$d дня</string>
</resources>
