<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar_edit_page"/>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/routeCardView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_margin="@dimen/small_padding"
                                        card_view:cardBackgroundColor="@android:color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/select_stations_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/big_padding"
                    android:paddingRight="@dimen/big_padding"
                    android:paddingTop="@dimen/small_padding"
                    android:textColorHint="@color/accentColor"
                    app:hintTextAppearance="@style/HintStyle">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pathFrom"
                        style="@style/PathTextFieldStyle"
                        android:hint="@string/pathFrom"
                        android:translationY="@dimen/hint_padding"/>


                </android.support.design.widget.TextInputLayout>

                <com.uzapp.view.utils.CheckableImageView
                    android:id="@+id/useLocationBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/big_padding"
                    android:src="@drawable/location_selector"/>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/big_padding"
                android:paddingRight="@dimen/big_padding"
                android:paddingTop="@dimen/small_padding"
                android:textColorHint="@color/accentColor"
                app:hintTextAppearance="@style/HintStyle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pathTo"
                    style="@style/PathTextFieldStyle"
                    android:hint="@string/pathTo"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/dateCardView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/small_padding"
                                        android:layout_marginLeft="@dimen/small_padding"
                                        android:layout_marginRight="@dimen/small_padding"
                                        card_view:cardBackgroundColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/searchDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/backRouteToggle"
                android:layout_alignTop="@+id/backRouteToggle"
                android:layout_marginLeft="@dimen/big_padding"
                android:gravity="center_vertical"
                android:text="@string/search_date_title"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size"/>

            <ToggleButton
                android:id="@+id/backRouteToggle"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="14dp"
                android:background="@drawable/button_background_selector"
                android:checked="false"
                android:stateListAnimator="@null"
                android:textColor="@drawable/button_text_color_selector"
                android:textOff="@string/back"
                android:textOn="@string/back"/>

            <TextView
                android:id="@+id/monthName"
                android:layout_alignLeft="@+id/searchDateTitle"
                android:layout_below="@+id/backRouteToggle"
                style="@style/MonthNameStyle"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/datePickerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/monthName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:minHeight="0dp"
                android:overScrollMode="never"/>

            <RelativeLayout
                android:id="@+id/selectedDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backRouteToggle"
                android:layout_marginLeft="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/firstMonthName"
                    android:layout_alignLeft="@+id/firstDate"
                    android:layout_alignRight="@+id/firstDate"
                    android:text="Июнь"
                    style="@style/MonthNameStyle"/>

                <include
                    android:id="@+id/firstDate"
                    layout="@layout/date_list_item"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstMonthName"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/firstDate"
                    android:layout_alignTop="@+id/firstDate"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_toLeftOf="@+id/secondDate"
                    android:layout_toRightOf="@+id/firstDate"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/inDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/in_n_days"
                        android:textAllCaps="true"
                        android:textColor="@color/textColorHint"
                        android:textSize="@dimen/text_size_small"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="@drawable/dotted_line"
                        android:layerType="software"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/secondMonthName"
                    android:layout_alignLeft="@+id/secondDate"
                    android:layout_alignRight="@+id/secondDate"
                    android:text="Июнь"
                    style="@style/MonthNameStyle"/>

                <include
                    android:id="@+id/secondDate"
                    layout="@layout/date_list_item"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/secondMonthName"
                    android:layout_toLeftOf="@+id/resetDateBtn"/>

                <Button
                    android:id="@+id/resetDateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground"
                    android:drawablePadding="8dp"
                    android:drawableTop="@drawable/date_close"
                    android:minWidth="0dp"
                    android:padding="18dp"
                    android:stateListAnimator="@null"
                    android:text="@string/cancel"
                    android:textColor="@color/textColorHint"
                    android:textSize="@dimen/text_size_small"/>
            </RelativeLayout>

            <Button
                android:id="@+id/seeFullCalendarBtn"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datePickerList"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="@dimen/medium_padding"
                android:layout_marginTop="7dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/next"
                android:stateListAnimator="@null"
                android:text="@string/see_full_calendar"
                android:textColor="@color/accentColor"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/findTicketsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:background="@drawable/find_tickets_button_selector"
        android:paddingBottom="22dp"
        android:paddingTop="22dp"
        android:text="@string/find_tickets"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size"/>
</LinearLayout>